add hero section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
           </ul>
         </nav>
       </header>
+      <!-- /******* Main Nav *******/ -->
+      <section id="hero">
+        <div class="hero__content">
+          <h1 class="hero__content--title">Scarlett Tyler</h1>
+          <p class="hero__content--paragraph">
+            UX Designer / Frontend Developer
+          </p>
+          <a href="#" class="hero__content--link">My Work</a>
+        </div>
+      </section>
     </main>
     <script src="app.js"></script>
   </body>
