--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </ul>
         </nav>
       </header>
-      <!-- /******* Main Nav *******/ -->
+      <!-- /******* Hero Section *******/ -->
       <section id="hero">
         <div class="hero__content">
           <h1 class="hero__content--title">Scarlett Tyler</h1>
@@ -63,6 +63,27 @@
             UX Designer / Frontend Developer
           </p>
           <a href="#" class="hero__content--link">My Work</a>
+        </div>
+      </section>
+      <!-- /******* Work Section *******/ -->
+      <section id="work">
+        <div class="work__card">
+          <img src="img/portfolio-design-01-1.jpg" alt="poster">
+        </div>
+        <div class="work__card">
+          <img src="img/portfolio-creative-02-1.jpg" alt="paper-bag">
+        </div>
+        <div class="work__card">
+          <img src="img/portfolio-creative-01-1.jpg" alt="clothing-bag">
+        </div>
+        <div class="work__card">
+          <img src="img/portfolio-branding-02-1.jpg" alt="branding">
+        </div>
+        <div class="work__card">
+          <img src="img/portfolio-branding-01-1.jpg" alt="cup">
+        </div>
+        <div class="work__card">
+          <img src="img/portfolio-print-02-1.jpg" alt="book-cover">
         </div>
       </section>
     </main>
