add About Me and Services sections

--- a/index.html
+++ b/index.html
@@ -68,22 +68,101 @@
       <!-- /******* Work Section *******/ -->
       <section id="work">
         <div class="work__card">
-          <img src="img/portfolio-design-01-1.jpg" alt="poster">
+          <img src="img/portfolio-design-01-1.jpg" alt="poster" />
         </div>
         <div class="work__card">
-          <img src="img/portfolio-creative-02-1.jpg" alt="paper-bag">
+          <img src="img/portfolio-creative-02-1.jpg" alt="paper-bag" />
         </div>
         <div class="work__card">
-          <img src="img/portfolio-creative-01-1.jpg" alt="clothing-bag">
+          <img src="img/portfolio-creative-01-1.jpg" alt="clothing-bag" />
         </div>
         <div class="work__card">
-          <img src="img/portfolio-branding-02-1.jpg" alt="branding">
+          <img src="img/portfolio-branding-02-1.jpg" alt="branding" />
         </div>
         <div class="work__card">
-          <img src="img/portfolio-branding-01-1.jpg" alt="cup">
+          <img src="img/portfolio-branding-01-1.jpg" alt="cup" />
         </div>
         <div class="work__card">
-          <img src="img/portfolio-print-02-1.jpg" alt="book-cover">
+          <img src="img/portfolio-print-02-1.jpg" alt="book-cover" />
+        </div>
+      </section>
+      <!-- /******* About Me Section *******/ -->
+      <section id="about-me">
+        <div class="about-me__img">
+          <img src="img/content-img-02.jpg" alt="Me" />
+        </div>
+        <div class="about-me__content">
+          <h2 class="about-me__content--title">About Me</h2>
+          <p class="about-me__content--paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Exercitationem impedit distinctio illum? Vitae accusamus natus
+            placeat nemo ducimus sequi! Veniam cupiditate atque sequi, dolorem
+            distinctio nulla nesciunt porro qui itaque.
+          </p>
+          <a href="#" class="about-me__content--link">Read More</a>
+        </div>
+      </section>
+      <!-- /******* Services Section *******/ -->
+      <section id="services">
+        <!-- Service 1 -->
+        <div class="service services__service-1">
+          <i class="fa-solid fa-palette"></i>
+          <h3 class="service--title services__service-1--title">UI Design</h3>
+          <p class="service--paragraph services__service-1--paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+            explicabo labore molestias dolor hic autem.
+          </p>
+        </div>
+        <!-- Service 2 -->
+        <div class="service services__service-2">
+          <i class="fa-solid fa-file-code"></i>
+          <h3 class="service--title services__service-2--title">
+            Web Development
+          </h3>
+          <p class="service--paragraph services__service-2--paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+            explicabo labore molestias dolor hic autem.
+          </p>
+        </div>
+        <!-- Service 3 -->
+        <div class="service services__service-3">
+          <i class="fa-solid fa-mobile-screen-button"></i>
+          <h3 class="service--title services__service-3--title">
+            App Development
+          </h3>
+          <p class="service--paragraph services__service-3--paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+            explicabo labore molestias dolor hic autem.
+          </p>
+        </div>
+        <!-- Service 4 -->
+        <div class="service services__service-4">
+          <i class="fa-solid fa-font"></i>
+          <h3 class="service--title services__service-4--title">Type Design</h3>
+          <p class="service--paragraph services__service-4--paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+            explicabo labore molestias dolor hic autem.
+          </p>
+        </div>
+        <!-- Service 5 -->
+        <div class="service services__service-5">
+          <i class="fa-solid fa-pen-to-square"></i>
+          <h3 class="service--title services__service-5--title">Blog Writer</h3>
+          <p class="service--paragraph services__service-5--paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+            explicabo labore molestias dolor hic autem.
+          </p>
+        </div>
+        <!-- Service 6 -->
+        <div class="service services__service-6">
+          <i class="fa-solid fa-diagram-project"></i>
+          <h3 class="service--title services__service-6--title">
+            Project Management
+          </h3>
+          <p class="service--paragraph services__service-6--paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+            explicabo labore molestias dolor hic autem.
+          </p>
         </div>
       </section>
     </main>
