--- a/index.html
+++ b/index.html
@@ -165,6 +165,100 @@
           </p>
         </div>
       </section>
+      <!-- /******* Skills Section *******/ -->
+      <section id="skills">
+        <div class="skills__design">
+          <h3 class="skills__design--title">Design Skills</h3>
+          <h4>Web Design</h4>
+          <div class="skills__design--progress">
+            <span class="skills__design--progress__1"></span>
+          </div>
+          <h4>Print Design</h4>
+          <div class="skills__design--progress">
+            <span class="skills__design--progress__2"></span>
+          </div>
+          <h4>Logo Design</h4>
+          <div class="skills__design--progress">
+            <span class="skills__design--progress__3"></span>
+          </div>
+          <h4>Graphic Design</h4>
+          <div class="skills__design--progress">
+            <span class="skills__design--progress__4"></span>
+          </div>
+        </div>
+        <div class="skills__coding">
+          <h3 class="skills__coding--title">Coding Skills</h3>
+          <h4>HTML / CSS</h4>
+          <div class="skills__coding--progress">
+            <span class="skills__coding--progress__1"></span>
+          </div>
+          <h4>JavaScript</h4>
+          <div class="skills__coding--progress">
+            <span class="skills__coding--progress__2"></span>
+          </div>
+          <h4>Python</h4>
+          <div class="skills__coding--progress">
+            <span class="skills__coding--progress__3"></span>
+          </div>
+          <h4>SQL</h4>
+          <div class="skills__coding--progress">
+            <span class="skills__coding--progress__4"></span>
+          </div>
+        </div>
+      </section>
+      <!-- /******* Testimonials Section *******/ -->
+      <section id="testimonials">
+        <!-- Card 1 -->
+        <div class="testimonials__card">
+          <div class="testimonials__card--img">
+            <img src="img/testimonials-1.jpg" alt="tony">
+          </div>
+          <div class="testimonials__card--content">
+            <h3 class="testimonials__card--content__title">Remarkable Eye</h3>
+            <p class="testimonials__card--content__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus nesciunt laudantium eos ipsum sequi consectetur.</p>
+          </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="testimonials__card">
+          <div class="testimonials__card--img">
+            <img src="img/testimonials-2.jpg" alt="natasha">
+          </div>
+          <div class="testimonials__card--content">
+            <h3 class="testimonials__card--content__title">Catchy Designs</h3>
+            <p class="testimonials__card--content__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus nesciunt laudantium eos ipsum sequi consectetur.</p>
+          </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="testimonials__card">
+          <div class="testimonials__card--img">
+            <img src="img/testimonials-3.jpg" alt="sally">
+          </div>
+          <div class="testimonials__card--content">
+            <h3 class="testimonials__card--content__title">Smoking Websites</h3>
+            <p class="testimonials__card--content__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus nesciunt laudantium eos ipsum sequi consectetur.</p>
+          </div>
+        </div>
+        <!-- Card 4 -->
+        <div class="testimonials__card">
+          <div class="testimonials__card--img">
+            <img src="img/testimonials-4.jpg" alt="sam">
+          </div>
+          <div class="testimonials__card--content">
+            <h3 class="testimonials__card--content__title">Easy to Work with</h3>
+            <p class="testimonials__card--content__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus nesciunt laudantium eos ipsum sequi consectetur.</p>
+          </div>
+        </div>
+      </section>
+      <!-- /******* Contact Section *******/ -->
+      <section id="contact">
+        <form class="contact__form">
+          <input type="text" placeholder="Name">
+          <input type="email" placeholder="Email">
+          <input type="text" placeholder="Subject">
+          <textarea name="message" placeholder="Message"></textarea>
+          <input type="submit" value="Submit">
+        </form>
+      </section>
     </main>
     <script src="app.js"></script>
   </body>
